# pidgin-festival

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  pidgin-festival.spec  pidgin-festival.spec.in  pre_config.h.in
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  es.gmo  es.po  pidgin-festival.pot  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po
src/: Makefile.am  Makefile.in  festival.c
